// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen persons config import-export] should create the persons: the persons has been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ person => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen persons config import-export] should update the persons: the persons has been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ person => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;
